# whobad

./: Cargo.toml  Dockerfile  config.example.toml
src/: config.rs  gemini.rs  main.rs  prompt.txt  riot.rs
